--- a/spelet/index.html
+++ b/spelet/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>p5 example</title>
     <script src="p5.min.js" defer></script>
-    <script src="gameExample.js" defer></script>
+    <script src="test.js" defer></script>
   </head>
   <body></body>
 </html>
