last last touches

--- a/spelet/index.html
+++ b/spelet/index.html
@@ -7,6 +7,16 @@
     <title>p5 example</title>
     <script src="p5.min.js" defer></script>
     <script src="test.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="firstscreen">
+      <div class="firstscreenchild">
+        <h1>Catch the students</h1>
+        <div class="clickText">
+          <p>Click anywhere to continue...</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
